--- a/lab1/Makefile
+++ b/lab1/Makefile
@@ -2,7 +2,7 @@ SRC_DIR := .
 OBJ_DIR := ./obj
 SRC_FILES := $(wildcard $(SRC_DIR)/*.cpp)
 OBJ_FILES := $(patsubst $(SRC_DIR)/%.cpp,$(OBJ_DIR)/%.o,$(SRC_FILES))
-LDFLAGS := -lGLEW -lGL -lglfw  -L../lib/ -lcommon
+LDFLAGS := -lGLEW -lGL -lglfw  -L../lib/ -lcommon -lassimp
 CPPFLAGS := -std=c++14 -Wall -Wextra -g
 INCLUDES := -I../include/
 GCC := g++
