CastData to HitData name changed. Material moved to own file. Loading emissive coefficients to material.

--- a/src/.vscode/launch.json
+++ b/src/.vscode/launch.json
@@ -6,7 +6,7 @@
       "type": "cppdbg",
       "request": "launch",
       "program": "${workspaceFolder}/../bin/raytracer.exe",
-      "args": ["${workspaceFolder}/../bin/sponza.rtc"],
+      "args": ["${workspaceFolder}/../bin/cornellBox.rtc"],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
       "environment": [],
