Adding custom lights fixed.

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -44,6 +44,8 @@
         "deque": "cpp",
         "new": "cpp",
         "optional": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "thread": "cpp",
+        "mutex": "cpp"
     }
 }
